# mangawatch

./: .env.example  .gitignore  README.md  bot_commands.py  check.yml  check_manga.py  manga_state.json  mangas.txt  pyproject.toml  run_etl.bat  settings.yml  telegram_offset.json
.github/workflows/: bot.yml  check.yml
carteiras/exemplo_banco_x/: config.yml
carteiras/exemplo_banco_x/sql/: acionamento.sql  acordos.sql  discado.sql  email.sql  estoque.sql  pagos.sql  sms.sql  whatsapp.sql
docs/: guia_do_analista.md
sql/datamart/: 001_fato_daily.sql  002_fato_funil.sql  003_etl_controle_execucao.sql
src/etl/: __init__.py  __main__.py  calendario.py  cli.py  pipeline.py  runlog.py  settings.py
src/etl/config/: loader.py  schema.py
src/etl/db/: connection.py  datamart.py
src/etl/extract/: extractor.py  sql_renderer.py
src/etl/quality/: checks.py
src/etl/reports/: __init__.py  base.py  daily.py  funil.py
src/etl/transform/: indicadores.py  segmenter.py
tests/: conftest.py
tests/integration/: docker-compose.test.yml  seed_source.sql  test_end_to_end.py
tests/unit/: test_calendario.py  test_config_schema.py  test_daily.py  test_funil.py  test_segmenter.py  test_sql_renderer.py
