[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bp-etl"
version = "0.1.0"
description = "Framework ETL unificado para relatórios de carteiras (daily, funil)"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pyarrow>=15.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "typer>=0.12",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "holidays>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
etl = "etl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
